.helm/templates/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: app-web
  namespace: prod
spec:
  ports:
    - name: web
      port: 80
      targetPort: 80
  selector:
    app: app-web
